[project]
name = "live-captioning"
version = "0.1.0"
description = "Customizable live-captioning for streamers using Voxtral Mini Transcribe Realtime"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mistralai[realtime]>=1.0.0",
    "pyaudio>=0.2.14",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
